Fix modal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -411,6 +411,7 @@ footer p {
   min-height: 100vh;
   z-index: 4;
   top: 0;
+  overflow-y: scroll;
   /* left: 0; */
   /* position: fixed; 
   top: 50%;
